# iai_kinect2

./: .gitignore
bb_kinect2_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
bb_kinect2_rviz/src/: person_visual.cpp  person_visual.h  persons_display.cpp  persons_display.h
kinect2_bridge/: CMakeLists.txt  package.xml
kinect2_bridge/cmake/: FindLibFreenect2.cmake  FindLibUSB.cmake  FindTurboJPEG.cmake
kinect2_bridge/config/: bb_kinect2_bridge_options.yaml
kinect2_bridge/dependencies/libjpeg-turbo64/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
kinect2_bridge/include/kinect2_bridge/: freenect_allocator.h  freenect_async_packet_processor.h  freenect_color_settings.h  freenect_command_transaction.h  freenect_config.h  freenect_data_callback.h  freenect_depth_packet_processor.h  freenect_depth_packet_stream_parser.h  freenect_exports.h  freenect_frame_listener.hpp  freenect_frame_listener_impl.h  freenect_internal_response.h  freenect_led_settings.h  freenect_libfreenect2.h  freenect_libusb.h  freenect_logger.h  freenect_logging.h  freenect_packet_pipeline.h  freenect_packet_processor.h  freenect_protocol_command.h  freenect_protocol_command_transaction.h  freenect_protocol_response.h  freenect_protocol_usb_control.h  freenect_registration.h  freenect_rgb_packet_processor.h  freenect_rgb_packet_stream_parser.h  freenect_threading.h  freenect_tinythread.h  freenect_usb_event_loop.h  freenect_usb_transfer_pool.h  kinect2_bridge.h  kinect2_bridge_private_linux.h  kinect2_bridge_private_windows.h  kinect2_console.h
kinect2_bridge/launch/: kinect2_bridge.launch
kinect2_bridge/src/: freenect_allocator.cpp  freenect_cpu_depth_packet_processor.cpp  freenect_depth_packet_processor.cpp  freenect_depth_packet_stream_parser.cpp  freenect_frame_listener_impl.cpp  freenect_libfreenect2.cpp  freenect_logging.cpp  freenect_packet_pipeline.cpp  freenect_protocol_command_transaction.cpp  freenect_protocol_usb_control.cpp  freenect_registration.cpp  freenect_rgb_packet_processor.cpp  freenect_rgb_packet_stream_parser.cpp  freenect_tinythread.cpp  freenect_turbo_jpeg_rgb_packet_processor.cpp  freenect_usb_event_loop.cpp  freenect_usb_transfer_pool.cpp  kinect2_bridge.cpp  kinect2_bridge_linux.cpp  kinect2_bridge_main.cpp  kinect2_bridge_windows.cpp
kinect2_registration/: CMakeLists.txt
kinect2_registration/include/kinect2_registration/: kinect2_console.h
kinect2_registration/src/: depth_registration_cpu.cpp
