<package>
  <name>bb_kinect2_rviz</name>
  <version>0.0.1</version>
  <description>
     RViz plugin for visualizing Kinect2 tracking data.
  </description>
  <maintainer email="bluish.gecko@gmail.com">Blouie the Blue Heeler</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bb_person_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>bb_kinect2_msgs</run_depend>	
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
